// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should correctly render comment 1`] = `
<div
  className="bcs-comment-container"
>
  <Media
    as="div"
    className="bcs-comment"
  >
    <MediaFigure
      as="figure"
    >
      <Component
        user={
          Object {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <TetherComponent
        attachment="top right"
        className="bcs-comment-delete-confirm"
        constraints={
          Array [
            Object {
              "attachment": "together",
              "to": "scrollParent",
            },
          ]
        }
        renderElementTag="div"
        renderElementTo={null}
        targetAttachment="bottom right"
      >
        <MediaMenu
          data-testid="comment-actions-menu"
          dropdownProps={Object {}}
          isDisabled={false}
        >
          <MenuItem
            className="bcs-comment-menu-delete"
            data-resin-target="activityfeed-inlinedelete"
            data-testid="delete-comment"
            onClick={[Function]}
          >
            <IconTrash
              color="#4e4e4e"
            />
            <FormattedMessage
              defaultMessage="Delete"
              id="be.contentSidebar.activityFeed.comment.commentDeleteMenuItem"
            />
          </MenuItem>
        </MediaMenu>
      </TetherComponent>
      <div>
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityMessage
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should correctly render comment when translation is enabled 1`] = `
<div
  className="bcs-comment-container"
>
  <Media
    as="div"
    className="bcs-comment"
  >
    <MediaFigure
      as="figure"
    >
      <Component
        user={
          Object {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div>
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityMessage
        id="123"
        onTranslate={[MockFunction]}
        tagged_message="test"
        translationEnabled={true}
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should render an error when one is defined 1`] = `
<div
  className="bcs-comment-container"
>
  <Media
    as="div"
    className="bcs-comment bcs-is-pending"
  >
    <MediaFigure
      as="figure"
    >
      <Component
        user={
          Object {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div>
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityMessage
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={true}
      />
    </MediaBody>
  </Media>
  <CommentInlineError
    message="errorrrrr"
    title="error"
  />
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/Comment should render commenter as a link 1`] = `
<div
  className="bcs-comment-container"
>
  <Media
    as="div"
    className="bcs-comment"
  >
    <MediaFigure
      as="figure"
    >
      <Component
        user={
          Object {
            "id": 10,
            "name": "50 Cent",
          }
        }
      />
    </MediaFigure>
    <MediaBody>
      <div>
        <UserLink
          data-resin-target="activityfeed-profilelink"
          id={10}
          name="50 Cent"
        />
      </div>
      <div>
        <ActivityTimestamp
          date={1506534041000}
        />
      </div>
      <ActivityMessage
        id="123"
        tagged_message="test"
        translationEnabled={false}
        translationFailed={null}
      />
    </MediaBody>
  </Media>
</div>
`;
